--- a/shilo/portafolio.html
+++ b/shilo/portafolio.html
@@ -17,12 +17,8 @@
   <div id="background"></div>
 
   <div class="section">
-   <h1 id="title" class="margin-top">Contacto</h1>
-   <h2 class="less-margin">Shilosoft 
-   <h3>Telefono: 6863465459</h3>
-   <h3>Correo: contactoshilosoft@gmail.com</h3>
-   <h3>Siguenos en  Redes Sociales</h3> 
-   
+   <h1 id="title" class="margin-top">Portafolio</h1>
+   <h2 class="less-margin">Shilosoft desarrollo de software</h2>
    
 
   <!--<h1 class="look">Solucion Tecnologica</h1>-->
@@ -34,7 +30,7 @@
     <div class="button black" id="black" onclick="goldColor()"></div>
    </div>
     -->
-    <img id="alta" src="img/contacto.png">
+  
     
  </div>
 
@@ -42,7 +38,6 @@
 
  <a id="test1" href="http://www.google.com"><img id="test1" src="img/insta.png" alt=""></a>
 
- <p id="desc">Shilosoft soluciones tecnologicas</p>
   
 </div>
 
